--- a/simple_mlp_cpp/simple_mlp_cpp.vcxproj.filters
+++ b/simple_mlp_cpp/simple_mlp_cpp.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="MlpNet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SupportFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="load_mnist.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MlpNet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SupportFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
