--- a/simple_mlp_cpp/simple_mlp_cpp.vcxproj
+++ b/simple_mlp_cpp/simple_mlp_cpp.vcxproj
@@ -130,11 +130,16 @@
     <ClCompile Include="load_mnist.cpp" />
     <ClCompile Include="MlpNet.cpp" />
     <ClCompile Include="SupportFunctions.cpp" />
+    <ClCompile Include="TrainMlp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="load_mnist.h" />
     <ClInclude Include="MlpNet.h" />
     <ClInclude Include="SupportFunctions.h" />
+    <ClInclude Include="TrainMlp.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="mlpConfig.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
