--- a/simple_mlp_cpp/simple_mlp_cpp.vcxproj.filters
+++ b/simple_mlp_cpp/simple_mlp_cpp.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="RLEigenUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TimeStamp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="load_mnist.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RLEigenUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TimeStamp.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
