--- a/simple_mlp_cpp/SConscript
+++ b/simple_mlp_cpp/SConscript
@@ -2,11 +2,13 @@ import os
 import buildConfig
 #get options and set default value
 debug = ARGUMENTS.get('debug', 1)
+print(debug)
+config = buildConfig.MlpBuildConfig(debug)
 
-config = buildConfig.buildConfig(debug==1)
+print(config.CCFLAGS)
 
 mlpLibEnv = Environment(CXX=config.CXX,CC=config.CC, CCFLAGS=config.CCFLAGS, CPPPATH=config.incDirs,
     CPPDEFINES=config.preDifines,ENV = {'PATH' : os.environ['PATH']})
 mlpSource = Glob("./*.cpp")
-print (mlpSource)
-mlpLibEnv.SharedLibrary(target = 'mlpcpp', source = mlpSource,LIBS=config.linkOpt, LIBPATH=config.linkDir)
+
+mlpLibEnv.SharedLibrary(target = config.targetName, source = mlpSource,LIBS=config.linkOpt, LIBPATH=config.linkDir)
